--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
 		"mongoose": "^7.0.1",
 		"nodemailer": "^6.9.1",
 		"nodemon": "^2.0.21",
+		"stripe": "^14.24.0",
 		"validator": "^13.9.0"
 	}
 }
