--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^13.5.0",
+		"antd": "^5.16.0",
+		"aos": "^3.0.0-beta.6",
 		"axios": "^1.3.4",
 		"bootstrap": "^5.2.3",
 		"country-state-city": "^3.1.2",
@@ -27,6 +29,7 @@
 		"react-toastify": "^9.1.1",
 		"redux-devtools-extension": "^2.13.9",
 		"redux-thunk": "^2.4.2",
+		"swiper": "^11.1.0",
 		"validator": "^13.9.0",
 		"web-vitals": "^2.1.4",
 		"webfontloader": "^1.6.28"
