--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
 		"express-fileupload": "^1.4.0",
 		"jsonwebtoken": "^9.0.0",
 		"mongoose": "^7.0.1",
+		"multer": "^1.4.5-lts.1",
 		"nodemailer": "^6.9.1",
 		"nodemon": "^2.0.21",
 		"stripe": "^14.24.0",
